updated the website

--- a/public/home.html
+++ b/public/home.html
@@ -18,11 +18,9 @@
             <li><a href="/wanttoauction">Want to Auction?</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Contact Us</a></li> 
+            <li><a href="/logout">Logout</a></li>
         </ul>
-        <form action="/logout" method="post">
-            <button style="height:30px;background-color: white;width:80px;border-radius: 5px;cursor: pointer;">logout</button>
-          
-        </form>
+       
         <div class="search">
             <input type="text"  placeholder="Search our Inventory" /> <i class="fa fa-search" aria-hidden="true"></i>
         </div>
